--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <br>
   <strong><a href="https://www.google.com/" target="blank" >This is my link!</a></strong>
   <br>
-  <a href="file:///Users/johnyaldo/Desktop/Hello%20World.html" target="_blank" >Refrence to another html page </a>
-  <<h2> <a href="/Users/johnyaldo/Desktop/Web Development /HTML - Personal Site/contact.html" target="blank">Contact info</a> </h2>
+  <a href="Hello%20World.html" target="_blank" >Refrence to another html page </a>
+  <<h2> <a href="contact.html" target="blank">Contact info</a> </h2>
   <h3>Work Experience</h3>
 
   <table border = "1">
